[package]
name = "protogen-examples"
version = '0.1.0'
authors = ["Micah Wylde <micah@micahw.com>"]
license = "Apache-2.0/MIT"
build = "build.rs"
publish = false
edition = "2018"

[dependencies]
bytes = "0.4"
protogen = { path = "../protogen" }

[dependencies.nom]
version = "^4.1"
features = ["verbose-errors"]

[build-dependencies.protogen-compiler]
path = "../protogen-compiler"
