[package]
name = "protogen-examples"
version = '0.1.0'
authors = ["Micah Wylde <micah@micahw.com>"]
license = "Apache-2.0/MIT"
build = "build.rs"
publish = false
edition = "2018"

[dependencies]
protogen = { path = "../protogen" }
rodio = "0.11.0"

[build-dependencies.protogen-compiler]
path = "../protogen-compiler"
